# sesh

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TASK.md  go.mod  go.sum  main.go
internal/app/: app.go  settings.go
internal/calendar/: calendar.go
internal/calsync/: auth.go  common.go  google.go  outlook.go  sync.go  token.go
internal/config/: config.go  toml.go
internal/db/: categories.go  db.go  sessions.go
internal/notify/: notify_darwin.go  notify_other.go
internal/state/: state.go
internal/todoist/: todoist.go
internal/ui/: theme.go  view.go
src/: app.rs  calendar.rs  cli.rs  main.rs  state.rs  todoist.rs
src/config/: mod.rs  theme.rs
src/db/: categories.rs  mod.rs  sessions.rs
src/ui/: analytics.rs  history.rs  mod.rs  timer.rs
src/ui/widgets/: clock.rs  mod.rs  status_bar.rs  tab_bar.rs
